--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,77 +6,63 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:background="@color/black">
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/btn"
-            android:layout_centerInParent="true"
-            android:layout_alignParentLeft="true"
-            android:background="@drawable/cust_btn"
-            android:text="Следующий"
-            android:layout_marginLeft="70dp"
-            android:textSize="10dp"
-            android:textColor="@color/black"></Button>
-
 
         <VideoView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
             android:id="@+id/vidView"></VideoView>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_alignParentRight="true"
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/tap_btn"
+    android:textColor="@color/white"
+    android:id="@+id/pushBtn"
+    android:layout_centerInParent="true"
+    android:layout_alignParentTop="true"
+    android:visibility="gone"
+    android:layout_marginTop="30dp"></TextView>
+        <ImageButton
+            android:layout_width="400dp"
+            android:layout_height="55dp"
+            android:id="@+id/btn"
+            android:backgroundTint="#00000000"
             android:layout_centerInParent="true"
-            android:layout_marginRight="30dp">
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="80dp"
+            android:src="@drawable/ic_tri2"></ImageButton>
             <ProgressBar
-                android:id="@+id/prgDownR"
-                android:layout_width="10dp"
-                android:layout_height="130dp"
-                android:progressDrawable="@drawable/cust_prg_bar_top"
+                android:id="@+id/prgR"
+                android:layout_width="40dp"
+                android:layout_height="280dp"
+                android:progressDrawable="@drawable/prgbar"
+                android:background="@drawable/ic_prgbar"
+                android:progressTint="@color/pink"
                 style="?android:attr/progressBarStyleHorizontal"
-                android:visibility="gone">
+                android:visibility="gone"
+                android:layout_alignParentRight="true"
+                android:layout_centerInParent="true"
+                android:layout_marginRight="30dp">
             </ProgressBar>
 
             <ProgressBar
-                android:id="@+id/prgUpR"
-                android:layout_width="10dp"
-                android:layout_height="130dp"
-                android:progressDrawable="@drawable/cust_prg_bar_bot"
+                android:id="@+id/prgL"
+                android:layout_width="40dp"
+                android:layout_height="280dp"
+                android:rotation="180"
+                android:progressDrawable="@drawable/prgbar"
+                android:background="@drawable/ic_prgbar"
+                android:progressTint="@color/pink"
                 style="?android:attr/progressBarStyleHorizontal"
-                android:visibility="gone"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="start"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="30dp">
+                android:visibility="gone"
+                android:gravity="start"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="30dp"
+                ></ProgressBar>
 
-            <ProgressBar
-                style="?android:attr/progressBarStyleHorizontal"
-                android:id="@+id/prgDownL"
-                android:layout_width="10dp"
-                android:layout_height="130dp"
-                android:progressDrawable="@drawable/cust_prg_bar_top"
-                android:visibility="gone"></ProgressBar>
-
-            <ProgressBar
-                android:id="@+id/prgUpL"
-                android:layout_width="10dp"
-                android:layout_height="130dp"
-                android:progressDrawable="@drawable/cust_prg_bar_bot"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:visibility="gone"/>
-        </LinearLayout>
         <TextView
             android:id="@+id/txtR"
             android:layout_width="wrap_content"
@@ -109,5 +95,4 @@
             android:visibility="gone"></TextView>
 
     </RelativeLayout>
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
