--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,11 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="MyPrgBar" parent="@style/Widget.AppCompat.ProgressBar">
+    <item name="android:indeterminateDrawable">@drawable/prgbar</item>
+    <item name="android:minHeight">40dp</item>
+    <item name="android:minWidth">280dp</item>
+        <item name="android:progressDrawable">@drawable/ic_prgbar</item>
+        <item name="color"></item>
+</style>
 </resources>
